<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya"
        android:gravity="center"
        android:text="@string/compra"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <Button
            android:id="@+id/btLacteos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lacteos" />

        <Button
            android:id="@+id/btCarnes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carnes" />

        <Button
            android:id="@+id/btVerduras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verduras" />

        <Button
            android:id="@+id/btPescados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pescados" />

        <Button
            android:id="@+id/btFactura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/factura" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>